--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "caniuse-lite": "^1.0.30001287",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.2.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
