--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "axios": "^0.24.0",
     "caniuse-lite": "^1.0.30001287",
     "react": "^17.0.0",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react": "^17.0.0",
+    "@types/react-burger-menu": "^2.8.2",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.16",
